--- a/src/input.css
+++ b/src/input.css
@@ -86,28 +86,11 @@ body {
     background: white;
     position: relative;
     white-space: nowrap;
+    background-color: #3b82f6;
 
   }
   
-  .logos:before,
-  .logos:after {
-    position: absolute;
-    top: 0;
-    width: 500px;
-    height: 100%;
-    content: "";
-    z-index: 2;
-  }
-  
-  .logos:before {
-    left: 0;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
-  }
-  
-  .logos:after {
-    right: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
-  }
+
   
   .logos:hover .logos-slide {
     animation-play-state: paused;
